--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Todo Juegos</title>
     <link rel="stylesheet" href="./games.css">
+    <link rel="shortcut icon" href="./Imagenes/logo2.ico" type="image/x-icon">
 </head>
 <body>
     <header>
